@@ -6,7 +6,8 @@ New features, changes and fixes since gnuplot version 4.6.3
 * FIX emf failed to initialize font correctly on some systems
 * FIX timedata columns can now be referred to via column(N) and column("HEAD")
 * FIX qt terminal toggling of enhanced text elements in plot with labels
-* FIX color/pattern generated for key entries for columnstacked histograms
+* FIX color/pattern generated for key entries of columnstacked histograms
+* FIX hitting ^C twice forces temination of wxt session hung by lost X-server
 
 New features, changes and fixes in gnuplot version 4.6.3
 ========================================================
